-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: None
-
Component/s: hotspot
-
b37
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8018050 | 7u45 | Jesper Wilhelmsson | P3 | Closed | Fixed | b01 |
| JDK-8010854 | 7u40 | Jesper Wilhelmsson | P3 | Resolved | Fixed | b18 |
The young garbage collection tracing event has a boolean to indicate if a promotion failed has occurred or not. This information is also available in its own event so the variable is duplicating the information. It was introduced for convenience to make it easy to see if a collection got promotion failed or not when looking at the GC events. However, the existence of this variable complicates the implementation of the evacuation failed event for G1, so we have decided to remove it.
- backported by
-
JDK-8010854 Remove promotion failed boolean from YC event
-
- Resolved
-
-
JDK-8018050 Remove promotion failed boolean from YC event
-
- Closed
-
- blocks
-
JDK-8008916 G1: Evacuation failed tracing event
-
- Closed
-