8010227: Remove promotion failed boolean from YC event Summary: Remove promotion failed boolean from YC event Reviewed-by: dholmes, brutisso